# mongo-metal

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  init-mongo.js
mongo-volume/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-1308127921003371025.wt  collection-1--6309381389330889927.wt  collection-2-1308127921003371025.wt  collection-7-1308127921003371025.wt  collection-8--6309381389330889927.wt  collection-9-1308127921003371025.wt  index-1-1308127921003371025.wt  index-10--6309381389330889927.wt  index-10-1308127921003371025.wt  index-13--6309381389330889927.wt  index-3--6309381389330889927.wt  index-3-1308127921003371025.wt  index-5--6309381389330889927.wt  index-8-1308127921003371025.wt  index-9--6309381389330889927.wt  sizeStorer.wt
mongo-volume/diagnostic.data/: metrics.2021-02-26T01-10-11Z-00000  metrics.interim
src/: db.rs  errors.rs  filters.rs  handlers.rs  main.rs
