[package]
name = "mongo-metal"
version = "0.1.0"
authors = ["duanebester"]
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.1"
warp = "0.3"
mongodb = "2.0.0-alpha"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
serde_derive = "1.0"

