[package]
name = "mongo-metal"
version = "0.1.0"
authors = ["duanebester"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
log = "0.4"
mongodb = "2.0.0-alpha"
pretty_env_logger = "0.4"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.24"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.1"
warp = "0.3"


[dev-dependencies]
serde_derive = "1.0"

